Stop court from being covered by other divs

--- a/Visualization/css/visualization.css
+++ b/Visualization/css/visualization.css
@@ -22,6 +22,7 @@
 svg {
   display: block;
   flex-basis: auto;
+  flex-shrink: 0;
 }
 
 /* Time clock */
